devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
MT_API int32_t __stdcall MT_Get_Board_T(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Board_T(int32_t ADev,int32_t* pValue);
//2020 01 05 外部温度传感器
MT_API int32_t __stdcall MT_Get_T_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_T_Num(int32_t ADev,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_T_Float(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_T_Float(int32_t ADev,uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_Get_T(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_T(int32_t ADev,uint16_t AObj,int32_t* pValue);
//2020 01 05 PWM设置
MT_API int32_t __stdcall MT_Get_PWM_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_Num(int32_t ADev,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM_F(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_PWM_F(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_PWM_F(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_F(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM_F_Float(uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_M_Set_PWM_F_Float(int32_t ADev,uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_Get_PWM_F_Float(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_F_Float(int32_t ADev,uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_Set_PWM01(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_PWM01(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_PWM01(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM01(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM001(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_PWM001(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_PWM001(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM001(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM_Float(uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_M_Set_PWM_Float(int32_t ADev,uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_Get_PWM_Float(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_Float(int32_t ADev,uint16_t AObj,float* pValue);
//================================================================
//圆弧插补
//================================================================
//设置圆弧插补主轴及速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_Axis(uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Axis(int32_t ADev,uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
//设置圆弧插补加速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补减速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_V(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_V(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补启动 顺时钟  圆心坐标模式
MT_API int32_t __stdcall MT_Set_Axis_Circle_R_CW_Run_Rel(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_R_CW_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Axis_Circle_R_CW_Run_Abs(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_R_CW_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
//设置圆弧插补启动 逆时钟   圆心坐标
MT_API int32_t __stdcall MT_Set_Axis_Circle_R_CCW_Run_Rel(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_R_CCW_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Axis_Circle_R_CCW_Run_Abs(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_R_CCW_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
//设置圆弧插补停止
MT_API int32_t __stdcall MT_Set_Axis_Circle_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Stop(int32_t ADev,uint16_t AObj);
//设置圆弧插补急停
MT_API int32_t __stdcall MT_Set_Axis_Circle_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Halt(int32_t ADev,uint16_t AObj);
//读取圆弧插补模块
MT_API int32_t __stdcall MT_Get_Axis_Circle_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Circle_Num(int32_t ADev,int32_t* pValue);
//插补运动状态
MT_API int32_t __stdcall MT_Get_Axis_Circle_Status(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Circle_Status(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补轴
MT_API int32_t __stdcall MT_Get_Axis_Circle_Axis(uint16_t AObj,int32_t* pID0,int32_t* pID1);
MT_API int32_t __stdcall MT_M_Get_Axis_Circle_Axis(int32_t ADev,uint16_t AObj,int32_t* pID0,int32_t* pID1);
//插补加速度
MT_API int32_t __stdcall MT_Get_Axis_Circle_Acc(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Circle_Acc(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补减速度
MT_API int32_t __stdcall MT_Get_Axis_Circle_Dec(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Circle_Dec(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补速度
MT_API int32_t __stdcall MT_Get_Axis_Circle_V(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Circle_V(int32_t ADev,uint16_t AObj,int32_t* pValue);
//2014 04 09补充定义 增加起始速度修改 增加多轴联动直线插补
MT_API int32_t __stdcall MT_Set_Axis_Home_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Home_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Home_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Home_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Home_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Home_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Axis_Home_Acc(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Home_Acc(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Axis_Home_Dec(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Home_Dec(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_Axis_Velocity_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Velocity_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Velocity_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Axis_Velocity_Acc(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Velocity_Acc(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Axis_Velocity_Dec(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Velocity_Dec(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_Axis_Position_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Position_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Position_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Axis_Position_Acc(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Position_Acc(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Axis_Position_Dec(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Position_Dec(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_Axis_Line_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Circle_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Line_X_Run_Rel(uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_X_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
MT_API int32_t __stdcall MT_Set_Axis_Line_X_Run_Abs(uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_X_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
MT_API int32_t __stdcall MT_Set_Axis_Line_X_Target_Rel(uint16_t AObj,int32_t AAxisID,int32_t ATarget);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_X_Target_Rel(int32_t ADev,uint16_t AObj,int32_t AAxisID,int32_t ATarget);
MT_API int32_t __stdcall MT_Set_Axis_Line_X_Target_Abs(uint16_t AObj,int32_t AAxisID,int32_t ATarget);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_X_Target_Abs(int32_t ADev,uint16_t AObj,int32_t AAxisID,int32_t ATarget);
MT_API int32_t __stdcall MT_Set_Axis_Line_X_Axis(uint16_t AObj,int32_t AAxisID,int32_t AAxis);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_X_Axis(int32_t ADev,uint16_t AObj,int32_t AAxisID,int32_t AAxis);
MT_API int32_t __stdcall MT_Set_Axis_Line_X_Count(uint16_t AObj,int32_t ANum);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_X_Count(int32_t ADev,uint16_t AObj,int32_t ANum);