devices/MRE_Controller_Data_Package/WIN64/MT_API.pas


function MT_Get_Board_T(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Board_T(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//2020 01 05 外部温度传感器
function MT_Get_T_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_T_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'


function MT_Get_T_Float(AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_T_Float(ADev:Integer;AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'

function MT_Get_T(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_T(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//2020 01 05 PWM设置
function MT_Get_PWM_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_PWM_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_PWM_F(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_PWM_F(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_PWM_F(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_PWM_F(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'


function MT_Set_PWM_F_Float(AObj:Word;Value:Single):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_PWM_F_Float(ADev:Integer;AObj:Word;Value:Single):Integer;stdcall;external 'MT_API.dll'

function MT_Get_PWM_F_Float(AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_PWM_F_Float(ADev:Integer;AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'

function MT_Set_PWM01(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_PWM01(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_PWM01(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_PWM01(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'


function MT_Set_PWM001(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_PWM001(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_PWM001(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_PWM001(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_PWM_Float(AObj:Word;Value:Single):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_PWM_Float(ADev:Integer;AObj:Word;Value:Single):Integer;stdcall;external 'MT_API.dll'

function MT_Get_PWM_Float(AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_PWM_Float(ADev:Integer;AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'
//================================================================
//圆弧插补
//================================================================
//设置圆弧插补主轴及速度
function MT_Set_Axis_Circle_Axis(AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_Axis(ADev:Integer;AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补加速度
function MT_Set_Axis_Circle_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补减速度
function MT_Set_Axis_Circle_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补速度
function MT_Set_Axis_Circle_V(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_V(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//设置圆弧插补启动 顺时钟  圆心坐标模式
function MT_Set_Axis_Circle_R_CW_Run_Rel(AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_R_CW_Run_Rel(ADev:Integer;AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Circle_R_CW_Run_Abs(AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_R_CW_Run_Abs(ADev:Integer;AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'

//设置圆弧插补启动 逆时钟   圆心坐标
function MT_Set_Axis_Circle_R_CCW_Run_Rel(AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_R_CCW_Run_Rel(ADev:Integer;AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Circle_R_CCW_Run_Abs(AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_R_CCW_Run_Abs(ADev:Integer;AObj:Word;AR:Integer;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'

//设置圆弧插补停止
function MT_Set_Axis_Circle_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补急停
function MT_Set_Axis_Circle_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_Halt(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//读取圆弧插补模块
function MT_Get_Axis_Circle_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Circle_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补运动状态
function MT_Get_Axis_Circle_Status(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Circle_Status(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补轴
function MT_Get_Axis_Circle_Axis(AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Circle_Axis(ADev:Integer;AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补加速度
function MT_Get_Axis_Circle_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Circle_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补减速度
function MT_Get_Axis_Circle_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Circle_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补速度
function MT_Get_Axis_Circle_V(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Circle_V(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//2014 04 09补充定义 增加起始速度修改 增加多轴联动直线插补
function MT_Set_Axis_Home_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Home_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Home_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Home_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Home_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Home_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Home_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Home_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Home_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Home_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Velocity_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Velocity_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Velocity_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Velocity_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Velocity_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Velocity_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Velocity_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Velocity_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'


function MT_Get_Axis_Velocity_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Velocity_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'


function MT_Set_Axis_Position_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'


function MT_Set_Axis_Position_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Position_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Position_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Position_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Position_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Position_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Circle_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Circle_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Run_Rel(AObj:Word;AAxis_Num:Integer;pAxis:PInteger;pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_X_Run_Rel(ADev:Integer;AObj:Word;AAxis_Num:Integer;pAxis:PInteger;pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Run_Abs(AObj:Word;AAxis_Num:Integer;pAxis:PInteger;pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_X_Run_Abs(ADev:Integer;AObj:Word;AAxis_Num:Integer;pAxis:PInteger;pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Target_Rel(AObj:Word;AAxisID:Integer;ATarget:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_X_Target_Rel(ADev:Integer;AObj:Word;AAxisID:Integer;ATarget:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Target_Abs(AObj:Word;AAxisID:Integer;ATarget:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_X_Target_Abs(ADev:Integer;AObj:Word;AAxisID:Integer;ATarget:Integer):Integer;stdcall;external 'MT_API.dll'


function MT_Set_Axis_Line_X_Axis(AObj:Word;AAxisID:Integer;AAxis:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_X_Axis(ADev:Integer;AObj:Word;AAxisID:Integer;AAxis:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Count(AObj:Word;ANum:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_X_Count(ADev:Integer;AObj:Word;ANum:Integer):Integer;stdcall;external 'MT_API.dll'
